--- a/nav.html
+++ b/nav.html
@@ -9,11 +9,11 @@
                     </div>
                 </div>
                 <div class="col-xs-10 text-right menu-1">
-                    <ul>
-                        <li class="active"><a href="index.html">Home</a></li>
+                    <ul id="nav">
+                        <li id="index"><a href="index.html">Home</a></li>
                         <!--<li><a href="work.html">Work</a></li>-->
-                        <li><a href="about.html">About</a></li>						
-                        <li><a href="contact.html">Contact</a></li>
+                        <li id="about"><a href="about.html">About</a></li>						
+                        <li id="contact"><a href="contact.html">Contact</a></li>
                         <!--<li class="btn-cta"><a href="#"><span>Login</span></a></li>-->
                     </ul>
                 </div>
