--- a/about.html
+++ b/about.html
@@ -118,18 +118,14 @@
 					<div class="col-md-12 col-sm-8 animate-box" data-animate-effect="fadeIn">
 						<div class="desc">
 							<h3>History</h3>
-							<p>This journy started with the simple premiss.  There are professional daytraders out there that using technical analysis can tilt the odds in their favour.</p> 
-							<p>Since daytraders start by looking for a pattern setup, this seemed like an optimal job for a computer.  Further a lot of the caution around day trading 
-								was not to let your ego take over (again something a compter is better at).</p>
-							<p>Once a pattern is setup a daytrader looks for further indications that a trade will succeed, this usually involves viewing charts at multple time domains and 
-								applying a number of technical indicators.  Since most of these technical idicators rely on price movment in that time domain, this seems like a perfect task 
-								to allow a comuter to find its own "technical indicators" via a machine learning problem.  This is where the bulk of our research has been.
-							</p>
+							<p>The project began with a simple, powerful fact: education around data tilts our odds of winning: games, business, life and money.   Technical analysis becomes more potent and pervasive with every data-driven day.</p> 
+							<p>Today, there are professional daytraders who leverage technical analysis to tilt the odds in their favor.  It seems, though, that technical analysis is an excellent job for a computer.  Also: daytraders are often cautioned to leave their egos at the door.  This is also something a computer excels at.</p>
+							<p>We studied the facets of what a day trader does to excel: studying charts across multiple time domains, applying numbers to technical indicators.  Since most of those technical indicators rely on price movement in that time domain - we believe that this is the type of task that a computer could execute to find its own "technical indicators" via a machine learning problem.</p>
+							<p>The bulk of our research has been in optimizing the feasibility of that execution.</p>
 						</div>
 						<div class="desc">
 							<h3>Mission &amp; Vission</h3>
-							<p>We beleive that a free transparent market is a healthy market.</p> 
-							<p>Having access to tools and algorithms to perform test on hypothesis should be available to people beyond hedge funds and instatutions.</p>
+							<p>A free market is a healthy market.  Data and learning is powerful, and the new economy will be driven by intelligent data.  Access to tools and algorhythms to test our hypothesis should be available to the learners and the entrepreneurs and the computer scientists of the world.  The unparalleled availability of data means that stock market analysis should be accessible and available to all interested parties, beyond hedge funds and deep-pocketed institutions.</p>
 						</div>
 					</div>
 					<!--
