--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>Machine Learning</h1>
-							<h2>applied to intraday market trading and strategies</h2>
+							<h2>Applied to intraday market trading strategies</h2>
 							<div class="row">
 								<form class="form-inline" id="fh5co-header-subscribe">
 									<div class="col-md-8 col-md-offset-2">
