--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>Machine Learning</h1>
-							<h2>Applied to intraday market trading strategies</h2>
+							<h2>Transforming the cosmos of intraday trading strategy</h2>
 							<div class="row">
 								<form class="form-inline" id="fh5co-header-subscribe">
 									<div class="col-md-8 col-md-offset-2">
@@ -181,7 +181,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<span>How does it work</span>
 					<h2>Our Research</h2>
-					<p>We strive to be as trasparent as possible with both our approach and results.  Our goal is to provide research and open source code that people can apply to patterns in the market.  Below are some of the areas we have studied.</p>
+					<p>We’re transparent with our approach and our results.  We provide specialized research and open source code that can be applied to patterns in the market.  Below are a few of the areas we have studied.</p>
 				</div>
 			</div>
 		</div>
