--- a/about.html
+++ b/about.html
@@ -149,8 +149,8 @@
 					<div class="fh5co-staff">
 						<img src="images/corey.jpeg" alt="Corey Auger">
 						<h3>Corey Auger</h3>
-						<strong class="role">Computer Scientist</strong>
-						<p>coder of lies and mischief.</p>
+						<strong class="role">CMO</strong>
+						<p>chief mischief officer</p>
 						<ul class="fh5co-social-icons">
 							<li><a href="https://twitter.com/coreyauger"><i class="icon-twitter"></i></a></li>
 							<li><a href="https://github.com/coreyauger"><i class="icon-github"></i></a></li>
