--- a/index.html
+++ b/index.html
@@ -198,16 +198,20 @@
 			</div>
 			<div class="col-half">
 				<div class="project-grid animate-box" style="background-image:url(images/rnn.png);">
+					<a href="https://medium.com/@coreyauger/daytrader-ai-machine-learning-applied-to-intraday-trading-a6b4e44b0274" target="_blank">
 					<div class="desc">
-						<span>Recurrent Neural Network RNN</span>
-						<h3>Results of applying RNN to our time series data.</h3>
+						<span>Blog</span>
+						<h3>Detailed description of research.</h3>
 					</div>
+					</a>
 				</div>
 				<div class="project-grid animate-box" style="background-image:url(images/support.png);">
+					<a href="https://medium.com/@coreyauger/part-2-building-an-analysis-platform-480978fc61f2" target="_blank">
 					<div class="desc">
 						<span>Data Analysis</span>
-						<h3>Exploring what it means to be a successful daytrader.</h3>
+						<h3>Platform details.</h3>
 					</div>
+					</a>
 				</div>
 			</div>
 		</div>
